# secoda-analysis-mcp-server

./: .env.example  .gitignore  README.md  prompt.py  pyproject.toml  server.py
.github/workflows/: publish.yml
bundle/: build.sh  manifest.template.json  pyproject.toml
bundle/server/: main.py
core/: __init__.py  client.py  config.py  models.py
src/secoda_analysis_mcp/: __init__.py  __main__.py  prompt.py  server.py
src/secoda_analysis_mcp/core/: client.py  config.py  models.py
src/secoda_analysis_mcp/tools/: ai_chat.py  collections.py  entity.py  questions.py  resources.py  search.py
tests/integration/: test_ai_chat.py  test_collections.py  test_entity.py  test_questions.py  test_resources.py  test_search.py
tests/mock/: test_client.py  test_models.py  test_prompt.py  test_tools_ai_chat.py  test_tools_collections.py  test_tools_entity.py  test_tools_questions.py  test_tools_resources.py  test_tools_search.py
tools/: __init__.py  ai_chat.py  collections.py  entity.py  questions.py  resources.py  search.py
