[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "secoda-analysis-mcp"
version = "0.1.0"
description = "Read-only MCP server for exploring and analysing a Secoda data catalog"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [{ name = "Martin Brummerstedt", email = "martin@brummerstedt.com" }]
keywords = ["mcp", "secoda", "data-catalog", "model-context-protocol", "data-lineage"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "mcp[cli]>=1.6.0",
    "requests>=2.28.0",
    "pydantic>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/mbrummerstedt/secoda-analysis-mcp"
Repository = "https://github.com/mbrummerstedt/secoda-analysis-mcp"
Issues = "https://github.com/mbrummerstedt/secoda-analysis-mcp/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "responses>=0.25.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "types-requests>=2.28.0",
]

[project.scripts]
secoda-analysis = "secoda_analysis.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/secoda_analysis"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: marks tests that hit the real Secoda API (requires API_TOKEN env var)",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "B", "W", "C"]
ignore = ["E501", "N812", "C901"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
